# corgi_ros2_ws

./: .gitignore  .gitmodules  0212.csv  0523-1.csv  README.md  bezier_traj.csv  control_bezier.csv  opt_0612_2.csv  opt_1.csv  opt_10.csv  opt_2.csv  opt_3.csv  opt_5.csv  robot_data.csv  single_leg_angles_bezier.csv  single_leg_angles_cubic.csv  single_leg_angles_fivetimes.csv  single_leg_angles_linear.csv  single_leg_mix_bezier.csv  single_leg_mix_bezier_golden.csv  test2.csv  test3.csv  test9.csv  total_info.csv  traj.csv  trajectory.csv  trajectory1.csv  trajectory2.csv  trajectory3.csv  trajectory4.csv  transformation_results.csv  turning_test.csv
src/corgi_algo/: CMakeLists.txt  README.md  package.xml
src/corgi_algo/launch/: selector_test.launch
src/corgi_algo/src/: CMakeLists.txt  algo copy.cpp  algo.cpp
src/corgi_camera/: CMakeLists.txt  package.xml
src/corgi_camera/launch/: zed_xmini.launch
src/corgi_camera/src/: CMakeLists.txt  Receive_feedback.cpp  callibration.cpp  stair.cpp
src/corgi_csv_control/: CMakeLists.txt  package.xml
src/corgi_csv_control/input_csv/: 0212.csv  0216_turn.csv  14_WLW_rotate_h179_v_50_D_2_SL_0.38931_SS_0.054108_phiRL_.csv  c_traj.csv  t_traj.csv  traj.csv  trans_con.csv  transformation_results.csv  wlw_demo.csv
src/corgi_csv_control/src/: CMakeLists.txt  corgi_csv_control.cpp
src/corgi_data_recorder/: CMakeLists.txt  package.xml
src/corgi_data_recorder/src/: CMakeLists.txt  corgi_data_recorder.cpp
src/corgi_force_estimation/: CMakeLists.txt  package.xml
src/corgi_force_estimation/include/: force_estimation.hpp
src/corgi_force_estimation/include/corgi_force_estimation/: force_estimation.hpp
src/corgi_force_estimation/launch/: run_simulation.launch  run_simulation.launch.py
src/corgi_force_estimation/src/: CMakeLists.txt  exp_sim_leg.cpp  exp_trot.cpp  exp_walk.cpp  exp_wheel.cpp  exp_wlw.cpp  force_estimation.cpp  force_estimation_lib.cpp  kt_test.cpp
src/corgi_gait_selector/: CMakeLists.txt  README.md  package.xml
src/corgi_gait_selector/include/: Simple_fsm.hpp
src/corgi_gait_selector/include/corgi_gait_selector/: Simple_fsm.hpp
src/corgi_gait_selector/src/: CMakeLists.txt  Simple_fsm.cpp  test_main.cpp
src/corgi_imu/: CMakeLists.txt  package.xml
src/corgi_imu/launch/: imu.launch  imu.launch.py
src/corgi_imu/scripts/: imu_node.sh
src/corgi_imu/src/: CMakeLists.txt  cx5.hpp  imu.cpp  imu_listener.cpp
src/corgi_msgs/: CMakeLists.txt  README.md  package.xml
src/corgi_msgs/msg/: ConfigStamped.msg  ContactState.msg  ContactStateStamped.msg  FsmCmdStamped.msg  Headers.msg  ImpedanceCmd.msg  ImuStamped.msg  LogStamped.msg  MotorCmd.msg  MotorStateStamped.msg  PowerCmdStamped.msg  PowerStateStamped.msg  RobotCmdStamped.msg  RobotRequestUpdate.msg  RobotStateStamped.msg  SimContactPoint.msg  SimDataStamped.msg  StairPlanes.msg  SteeringCmd.msg  SteeringCmdStamped.msg  SteeringStateStamped.msg  WheelCmd.msg
src/corgi_msgs/srv/: Imu.srv
src/corgi_odometry/: CMakeLists.txt  package.xml
src/corgi_odometry/data/: data01.csv  out_data01_kld.csv  out_test_v01_1m_simulation_1000hz_kld.csv  test0.csv  test1.csv  test_v01_1m_out.csv
src/corgi_odometry/include/: Config.hpp  DisturbanceObserver.hpp  corgi_odometry.hpp
src/corgi_odometry/launch/: contact_leg_estimator.launch.py  corgi_odometry.launch  velocity_estimator.launch.py
src/corgi_odometry/src/: CMakeLists.txt  velocity_estimator.cpp
src/corgi_odometry/tests/: CMakeLists.txt  InformationFilter_offline.cpp
src/corgi_panel/: CMakeLists.txt  README.md  package.xml
src/corgi_panel/install/: local_setup.sh  setup.sh
src/corgi_panel/launch/: corgi_control_panel.launch  corgi_control_panel.launch.py
src/corgi_panel/log/: latest_build
src/corgi_panel/scripts/: corgi_config_panel_dev.py  corgi_control_panel.py  corgi_control_panel_dev.py
src/corgi_ros_bridge/: CMakeLists.txt  package.xml
src/corgi_ros_bridge/launch/: corgi_ros_bridge.launch.py
src/corgi_ros_bridge/scripts/: corgi_ros_bridge.sh
src/corgi_ros_bridge/src/: CMakeLists.txt  corgi_ros_bridge.cpp  corgi_ros_bridge_dev.cpp
src/corgi_set_zero/: CMakeLists.txt  package.xml
src/corgi_set_zero/src/: CMakeLists.txt  set_zero.cpp
src/corgi_sim/: CMakeLists.txt  README.md  package.xml
src/corgi_sim/launch/: run_simulation.launch  run_simulation.launch.py  run_simulation_uneven.launch  run_simulation_webots_ros2.launch.py
src/corgi_sim/scripts/: webots_driver_node.py  webots_launcher.py
src/corgi_sim/src/: CMakeLists.txt  corgi_sim.cpp  corgi_sim_pos.cpp  corgi_sim_trq.cpp
src/corgi_sim/srv/: GetUint64.srv  MotorSetControlPid.srv  node_get_def.srv
src/corgi_sim/worlds/: corgi_force_plate_proto.wbt  corgi_old_proto.wbt  corgi_origin.wbt  corgi_uneven_proto.wbt  leg_old_proto.wbt
src/corgi_stair/: CMakeLists.txt  README.md  USAGE_EXAMPLE.md  package.xml
src/corgi_stair/include/: plane_segmentation.hpp  stair_climb.hpp
src/corgi_stair/src/: CMakeLists.txt  flood_plane_segmentation.cpp  leg_info.cpp  normal_vector_plane_segmentation.cpp  normal_vector_plane_segmentation2.cpp  plane_segmentation.cpp  plane_segmentation_node.cpp  play_motor_cmd.cpp  save_motor_cmd.cpp  stair_climb.cpp  stair_estimator.cpp  stair_main.cpp  stair_main_indoor.cpp  stair_main_indoor_open.cpp  stair_main_outdoor.cpp  stair_main_outdoor2.cpp  stair_main_outdoor3.cpp  stair_main_outdoor_open.cpp
src/corgi_transform/: CMakeLists.txt  README.md  package.xml
src/corgi_transform/include/: wheel_to_leg.hpp
src/corgi_transform/launch/: transform_test.launch  transform_test.launch.py
src/corgi_transform/src/: CMakeLists.txt  transform_main.cpp  wheel_to_leg.cpp
src/corgi_utils/: CMakeLists.txt  CONVERSION_STATUS.md  README.md  package.xml  test_ros2_conversion.sh
src/corgi_utils/include/: bezier.hpp  leg_model.hpp
src/corgi_utils/src/: CMakeLists.txt  bezier.cpp  config.cpp  leg_model.cpp  leg_model_main.cpp  trajectory_plan.cpp
src/corgi_virtual_agent/: CMakeLists.txt  README.md  package.xml
src/corgi_virtual_agent/src/: CMakeLists.txt  corgi_virtual_agent.cpp
(+239 files in other folders)
