<?xml version="1.0"?>
<package format="3">
  <name>corgi_algo</name>
  <version>0.1.0</version>
  <description>High-level locomotion algorithm selector for Corgi (ROS 2).</description>
  <maintainer email="r12522806@ntu.edu.tw">Yatinghsu000627</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>eigen3_cmake_module</depend>
  <depend>Eigen3</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>corgi_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>