<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>corgi_data_recorder</name>
  <version>1.0.0</version>
  <description>The corgi_data_recorder package</description>
  <maintainer email="r13522820@ntu.edu.tw">anne</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>rosgraph_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>corgi_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
