<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>corgi_force_estimation</name>
  <version>0.0.1</version>
  <description>The corgi_force_estimation package</description>
  <maintainer email="r13522820@ntu.edu.tw">anne</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>corgi_msgs</depend>
  <depend>corgi_utils</depend>
  <depend>corgi_walk</depend>
  <depend>corgi_gait_selector</depend>
  <depend>corgi_hybrid</depend>
  <depend>eigen3_cmake_module</depend>
  <depend>Eigen3</depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>