<?xml version="1.0"?>
<package format="2">
  <name>corgi_gait_selector</name>
  <version>0.0.0</version>
  <description>Simple fsm control</description>
  <maintainer email="r12522806@ntu.edu.tw">Yatinghsu000627</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>corgi_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>joy</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>rosgraph_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>corgi_utils</build_depend>
  <build_depend>corgi_walk</build_depend>
  <build_depend>wheeled_control</build_depend>
  <build_depend>corgi_transform</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <!-- <build_depend>corgi_gait_selector</build_depend> -->

  <build_export_depend>joy</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>corgi_msgs</build_export_depend>
  <build_export_depend>rosgraph_msgs</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>message_runtime</build_export_depend>
  <build_export_depend>corgi_utils</build_export_depend>
  <build_export_depend>corgi_walk</build_export_depend>
  <build_export_depend>corgi_transform</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>wheeled_control</build_export_depend>
  <!-- <build_export_depend>corgi_gait_selector</build_export_depend> -->

  <exec_depend>joy</exec_depend>
  <exec_depend>corgi_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>rosgraph_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>message_generation</exec_depend>
  <exec_depend>corgi_utils</exec_depend>
  <exec_depend>corgi_walk</exec_depend>
  <exec_depend>corgi_transform</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>wheeled_control</exec_depend>
  <!-- <exec_depend>corgi_gait_selector</exec_depend> -->

  <export>

  </export>
</package>
