<?xml version="1.0"?>
<package format="3">
  <name>corgi_msgs</name>
  <version>0.0.0</version>
  <description>Message and service definitions for corgi</description>

  <maintainer email="r13522820@ntu.edu.tw">anne</maintainer>
  <license>Proprietary</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
