<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>corgi_odometry</name>
  <version>0.0.0</version>
  <description>The corgi_odometry package</description>
  <maintainer email="r13522819@ntu.edu.tw">hiho817</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>corgi_msgs</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>rosgraph_msgs</depend>
  <depend>geometry_msgs</depend>

  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
