<?xml version="1.0"?>
<package format="3">
  <name>corgi_panel</name>
  <version>0.0.1</version>
  <description>PyQt5 GUI control panel for the Corgi quadruped robot (ROS 2).</description>
  <maintainer email="r12522823@ntu.edu.tw">yisyuan</maintainer>
  <license>BSD-3-Clause</license>

  <!-- Build tools -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Build dependencies for installing Python scripts via CMake -->
  <build_depend>ament_cmake_python</build_depend>

  <!-- Runtime dependencies -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>corgi_msgs</exec_depend>
  <exec_depend>python3-pyqt5</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>